--- a/ShipGameOpenTK/ShipGameOpenTK.csproj
+++ b/ShipGameOpenTK/ShipGameOpenTK.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
+    <Compile Include="BulletManager.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleManager.cs" />
